<?xml version="1.0"?>
<package format="3">
  <name>order_py_pkg</name>
  <version>0.0.0</version>
  <description>Cafe order simulation package</description>
  <maintainer email="illusion0121@163.com">illusion</maintainer>
  <license>Apache-2.0</license>

  <build_depend>python3-pytest</build_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>rosidl_runtime_py</depend>
  <depend>order_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>